fix help and Definitions page on dark mode

--- a/wordle/src/App.css
+++ b/wordle/src/App.css
@@ -127,8 +127,8 @@ img {
 .helpPage, .definitionsPage {
   display: none;
   position: absolute;
+  /*background-color: transparent;*/
   height: 100vh;
-  background-color: white;
   top: 0;
   right: -5px;
   font-size: 14px
@@ -246,10 +246,6 @@ section {
   font-weight: bold;
 }
 
-.white {
-  color: white;
-}
-
 .green {
   background-color: #6AAA64;
 }
@@ -324,7 +320,7 @@ section {
 .letterBox, .helpLetterBox, .resultSquer {
   width: 45px;
   height: 45px;
-  border: 2px solid lightgray;
+  border: 2px solid gray;
   border-radius: 2px;
   margin: 4px;
   display: flex;
@@ -332,6 +328,11 @@ section {
   align-items: center;
   font-size: 20px;
   text-transform: capitalize;
+}
+
+.helpColorLetter {
+  color: white;
+  border: 0;
 }
 
 .resultSquer {
